syntax = "proto3";

option csharp_namespace = "Domains";

package user;

message User {
    string sku = 1;
    string name = 2;
    string pass = 3;
    string mail = 4;
    string tag = 5;
}

message FetchUserBySku 
{
    string sku = 1;
}

message FetchUserByTag
{
    string sku = 1;
}

message FetchUserByNameAndPass
{
    string name = 1;
    string pass = 2;
}

service Users {
  rpc Get(FetchUserBySku) returns (User);
  rpc GetByTag(FetchUserByTag) returns (User);
  rpc GetByNameAndPass(FetchUserByNameAndPass) returns (User);
  rpc Del(FetchUserBySku) returns (User);
  rpc Set(User) returns (User);
  rpc Put(User) returns (User);
}